--- a/server/index.css
+++ b/server/index.css
@@ -1,8 +1,27 @@
+body {
+    background-color: gray;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 95vw;
+  height: 95vh;
+}
+
+#draggable {
+  border: 3px solid black;
+  width: 80%;
+  height: 80%;
+}
+
 
 #vidStream {
     object-fit: fill;
-    border: 3px solid black; 
     cursor: none;
-    width: 90vw;
-    height: 90vh;   
+    width: 100%;
+    height: 100%;
 }
