--- a/server/index.css
+++ b/server/index.css
@@ -1,5 +1,6 @@
 body {
     background-color: gray;
+    margin: 0;
 }
 
 #container {
@@ -8,15 +9,17 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 95vw;
-  height: 95vh;
+  width: 100dvw;
+  height: 100dvh;
   touch-action: none;
 }
 
 #draggable {
-  border: 3px solid black;
-  width: 80%;
-  height: 80%;
+  border: 10px solid black;
+  width: 100%;
+  height: 100%;
+  max-width: 98dvw;
+  max-height: 98dvh;
 }
 
 
