--- a/src/client/index.css
+++ b/src/client/index.css
@@ -20,8 +20,24 @@ body {
   height: 100%;
   max-width: 98dvw;
   max-height: 98dvh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
+#connectionStatus {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
 #vidStream {
     object-fit: fill;
@@ -29,4 +45,19 @@ body {
     width: 100%;
     height: 100%;
     touch-action: none;
+}
+
+#spinner {
+  border: 1vw solid #f3f3f3;
+  border-top: 1vw solid #3498db;
+  border-radius: 50%;
+  width: 20vw;
+  height: 20vw;
+  animation: spin 2s linear infinite;
+  margin-bottom: 2em;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
